# Gravitational-N-body-Simulation

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  nbsimSetupMSVCRuntime.cmake  nbsimSetupTesting.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  nbsimMyFirstApp.cpp  randSystemSimulator.cpp  solarSystemSimulator.cpp
Code/Lib/: CMakeLists.txt  nbsimBasicTypes.cpp  nbsimBasicTypes.h  nbsimException.cpp  nbsimException.h  nbsimExceptionMacro.h  nbsimMassiveParticle.cpp  nbsimMassiveParticle.h  nbsimMyFunctions.cpp  nbsimMyFunctions.h  nbsimParticle.cpp  nbsimParticle.h  nbsimRandSystem.cpp  nbsimRandSystem.h  nbsimRandSystemMP.cpp  nbsimRandSystemMP.h  nbsimRandomSystem.h  nbsimSimulator.cpp  nbsimSimulator.h  nbsimSimulatorMP.cpp  nbsimSimulatorMP.h  nbsimSolarSystem.cpp  nbsimSolarSystem.h  nbsimSolarSystemData.ipp  nbsimWin32ExportHeader.h
Testing/: CMakeLists.txt  nbsimBasicTest.cpp  nbsimCatchMain.cpp  nbsimCatchMain.h  nbsimCommandLineArgsTest.cpp
